# rd

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Dockerfile  README.md  THIRD-PARTY-NOTICES.TXT  build.gradle  build.gradle.kts  build.sh  cross.gradle  gradle.properties  gradlew  gradlew.bat  models.gradle  qodana.yaml  settings.gradle  settings.gradle.kts  versions.gradle  versions.gradle.kts
rd-cpp/: .clang-format  CMakeLists.txt  PrecompiledHeader.cmake  README.md  build.cmd  build.gradle  build.gradle.kts  build.gradle.kts.bak  buildtest.cmd  get_dependencies.bat  get_dependencies.cmd  settings.gradle.kts.bak  setup_and_build_vc.bat
rd-cpp/clsocket/: CMakeLists.txt
rd-cpp/clsocket/src/: SimpleSocket.cpp
rd-cpp/cmake/: utils.cmake
rd-cpp/demo/: CMakeLists.txt  main.cpp  profile.cpp
rd-cpp/demo/model/: CMakeLists.txt  instantiations.cpp  instantiations.h
rd-cpp/demo/model/DemoModel/: Base.cpp  Base.h  Base_Unknown.cpp  Base_Unknown.h  DemoModel.cpp  DemoModel.h  Derived.cpp  Derived.h  MyScalar.cpp  MyScalar.h
rd-cpp/demo/model/DemoRoot/: DemoRoot.cpp  DemoRoot.h
rd-cpp/demo/model/ExtModel/: ExtModel.cpp  ExtModel.h
rd-cpp/doc/: Doxyfile
rd-cpp/export/: rd-cpp.nuspec  rd-cpp.props
rd-cpp/misc/: for_ubt.patch
rd-cpp/optional/: CMakeLists.txt
rd-cpp/optional/tl/: optional.hpp
rd-cpp/rd_core_cpp/: CMakeLists.txt
rd-cpp/rd_core_cpp/src/main/: CMakeLists.txt  Logger.cpp  Logger.h
rd-cpp/rd_core_cpp/src/main/lifetime/: Lifetime.cpp  Lifetime.h  LifetimeDefinition.cpp  LifetimeDefinition.h  LifetimeImpl.cpp  LifetimeImpl.h  SequentialLifetimes.cpp  SequentialLifetimes.h
rd-cpp/rd_core_cpp/src/main/reactive/: CMakeLists.txt  IScheduler.cpp  IScheduler.h  Property.h  SignalX.cpp  SignalX.h  ViewableList.h  ViewableMap.h  ViewableSet.h  interfaces.h
rd-cpp/rd_core_cpp/src/main/util/: CMakeLists.txt  core_util.cpp  core_util.h  custom_type_traits.h  gen_util.cpp  gen_util.h  overloaded.h
rd-cpp/rd_core_cpp/src/test/cases/: AdviseVsViewTest.cpp  PropertyTest.cpp  SignalTest.cpp  ViewableListTest.cpp  ViewableMapTest.cpp  ViewableSetTest.cpp
rd-cpp/rd_core_cpp/src/test/util/: test_util.cpp  test_util.h
rd-cpp/rd_framework_cpp/: CMakeLists.txt
rd-cpp/rd_framework_cpp/src/main/: Buffer.cpp  Buffer.h  CMakeLists.txt  Identities.cpp  Identities.h  MessageBroker.cpp  MessageBroker.h  Protocol.cpp  Protocol.h  RdId.cpp  RdId.h
rd-cpp/rd_framework_cpp/src/main/base/: IProtocol.cpp  IProtocol.h  IRdBindable.h  IRdDynamic.h  IRdReactive.h  ISerializer.h  ISerializersOwner.cpp  IUnknownInstance.cpp  IUnknownInstance.h  RdBindableBase.cpp  RdBindableBase.h  RdPropertyBase.h  RdReactiveBase.cpp  RdReactiveBase.h  WireBase.cpp  WireBase.h
rd-cpp/rd_framework_cpp/src/main/impl/: RName.cpp  RName.h  RdList.h  RdMap.h  RdProperty.h  RdSet.h  RdSignal.h
rd-cpp/rd_framework_cpp/src/main/serialization/: ArraySerializer.h  IMarshaller.h  ISerializable.h  NullableSerializer.h  Polymorphic.cpp  Polymorphic.h  SerializationCtx.cpp  SerializationCtx.h  Serializers.cpp  Serializers.h
rd-cpp/rd_framework_cpp/src/main/task/: RdCall.cpp  RdCall.h  RdEndpoint.h  RdTask.h  RdTaskImpl.h  RdTaskResult.cpp  RdTaskResult.h
rd-cpp/rd_framework_cpp/src/main/util/: demangle.cpp  demangle.h  shared_function.cpp  shared_function.h
rd-cpp/rd_framework_cpp/src/main/wire/: CMakeLists.txt  PumpScheduler.cpp  PumpScheduler.h  SocketScheduler.cpp  SocketScheduler.h  SocketWire.cpp  SocketWire.h
rd-cpp/rd_framework_cpp/src/test/: CMakeLists.txt
rd-cpp/rd_framework_cpp/src/test/cases/: BufferTest.cpp  RdExtTest.cpp  RdListTest.cpp  RdMapTest.cpp  RdPropertyTest.cpp  RdSetTest.cpp  RdSignalTest.cpp  RdTaskTest.cpp  SocketWireTest.cpp
rd-cpp/rd_framework_cpp/src/test/kotlin_interaction/: test.cpp
rd-cpp/rd_framework_cpp/src/test/util/: CMakeLists.txt  DynamicEntity.cpp  DynamicEntity.h  DynamicExt.cpp  DynamicExt.h  ExtProperty.cpp  ExtProperty.h  RdFrameworkTestBase.cpp  RdFrameworkTestBase.h  SocketWireTestBase.cpp  SocketWireTestBase.h  TestScheduler.cpp  TestScheduler.h  TestWire.cpp  TestWire.h  WireUtil.cpp  WireUtil.h
rd-cpp/rd_interaction/: CMakeLists.txt  test.cpp
rd-cpp/rider_model/: PrecompiledHeader.cmake
rd-cpp/src/: CMakeLists.txt
rd-cpp/src/rd_core_cpp/: CMakeLists.txt  pch.h  rd_core_export.h
rd-cpp/src/rd_core_cpp/include/: IProperty.h  Lifetime.h  LifetimeDefinition.h  SignalX.h  ViewableList.h  ViewableMap.h  ViewableSet.h
rd-cpp/src/rd_core_cpp/src/: CMakeLists.txt
rd-cpp/src/rd_core_cpp/src/lifetime/: Lifetime.cpp  LifetimeDefinition.cpp  LifetimeImpl.cpp  LifetimeImpl.h  SequentialLifetimes.cpp
rd-cpp/src/rd_core_cpp/src/main/: CMakeLists.txt  Logger.cpp  Logger.h  pch.h
rd-cpp/src/rd_core_cpp/src/reactive/: SignalX.cpp  interfaces.h
rd-cpp/src/rd_core_cpp/src/test/: CMakeLists.txt  pch.h
rd-cpp/src/rd_core_cpp/test/cases/: AdviseVsViewTest.cpp
rd-cpp/src/rd_core_cpp/test/kotlin_interaction/: CMakeLists.txt  test.cpp
rd-cpp/src/rd_core_cpp/test/util/: CMakeLists.txt  test_util.cpp
rd-cpp/src/rd_core_cpp/util/: CMakeLists.txt  Logger.cpp  core_traits.h  core_util.h  shared_function.h  wrapper.h
rd-cpp/src/rd_framework_cpp/: CMakeLists.txt  pch.h  rd_framework_export.h
rd-cpp/src/rd_framework_cpp/include/: Buffer.h  IProtocol.h  Protocol.h  RdEndpoint.h  RdList.h  RdProperty.h  RdSet.h  Serialization.h
rd-cpp/src/rd_framework_cpp/src/: CMakeLists.txt  Identities.h  MessageBroker.cpp  MessageBroker.h  RdId.cpp  RdId.h
rd-cpp/src/rd_framework_cpp/test/: CMakeLists.txt
rd-cpp/src/rd_framework_cpp/util/: CMakeLists.txt  framework_traits.h
rd-cpp/src/rd_gen_cpp/: CMakeLists.txt  RdTextBuffer.cpp  RdTextBuffer.h  pch.h
rd-cpp/src/rd_gen_cpp/src/: CMakeLists.txt  RdTextBuffer.cpp  RdTextBuffer.h  pch.h
rd-cpp/src/rd_gen_cpp/test/: CMakeLists.txt
rd-cpp/test_client/: CMakeLists.txt  main.cpp  model.cpp  model.hpp
rd-cpp/test_server/: CMakeLists.txt  UnrealEngineModel.cpp  UnrealEngineModel.h  main.cpp
rd-cpp/test_server_receivable/: CMakeLists.txt  main.cpp
(+2473 files in other folders)
